--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-navigation": "^0.1.6",
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "sass": "^1.32.8"
   }
 }
