--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "exercises-meastrix001",
+  "name": "my-walking-app",
   "version": "1.0.0",
-  "description": "My landing page for my walking app",
+  "description": "A simple landing page made with Eleventy",
   "main": "index.js",
   "scripts": {
-    "eleventy": "npx @11ty/eleventy",
-    "sass": "sass --style=compressed src/style/main.scss src/style.css",
+    "eleventy": "npx eleventy",
+    "sass": "sass --style=compressed src/style/main.scss src/main.css",
     "watch:sass": "npm run sass -- --watch",
-    "watch:dev": "eleventy --serve",
+    "watch:eleventy": "npx eleventy --serve",
     "start": "npm-run-all sass --parallel watch:*",
-    "build": "npm run eleventy"
+    "build": "npm run eleventy && npm run sass"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pgmgent-2021-uip/exercises-Meastrix001.git"
+    "url": "git+https://github.com/pgmgent-2021-uip/exercises-adriaanglibert.git"
   },
-  "author": "Nick Roofthooft",
-  "license": "ISC",
+  "keywords": [
+    "Walking",
+    "Eleventy"
+  ],
+  "author": "Adriaan Glibert",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pgmgent-2021-uip/exercises-Meastrix001/issues"
+    "url": "https://github.com/pgmgent-2021-uip/exercises-adriaanglibert/issues"
   },
-  "homepage": "https://github.com/pgmgent-2021-uip/exercises-Meastrix001#readme",
+  "homepage": "https://github.com/pgmgent-2021-uip/exercises-adriaanglibert#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-navigation": "^0.1.6",
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "sass": "^1.32.8"
   }
 }
