--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch:sass": "npm run sass -- --watch",
     "watch:eleventy": "npx eleventy --serve",
     "start": "npm-run-all sass --parallel watch:*",
-    "build": "npm run eleventy && npm run sass"
+    "build": "npm run eleventy && npm run sass --pathprefix 'Portfolio'"
   },
   "repository": {
     "type": "git",
